2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* data/totem.keys: Add matroska to the .keys file for totem
	(Patch by Frederic Crozat <fcrozat@mandrakesoft.com>)

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (on_button1_clicked): fix KDE detection
	for newer KDE versions (Patch by Frederic Crozat
	<fcrozat@mandrakesoft.com>)

2004-09-15  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (xine_event_message),
	(bacon_video_widget_set_logo): work-around a bug in xine-lib where
	it wouldn't send the right error message if trying to play a DVD
	without libdvdcss installed (Patch by Frederic Crozat
	<fcrozat@mandrakesoft.com>)

2004-09-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-remote.h:
	* src/totem.c: (totem_action_remote), (process_options),
	(process_command_line_early), (process_command_line), (main):
	make --debug actually work for the instance that's being started,
	add a "--toggle-controls" command-line option (Closes: #152355)

2004-09-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (process_command_line_quit), (main):
	make "totem --quit" just exit if there's no running Totem instance
	(Closes: #152360)

2004-09-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_key_press):
	make Ctrl+A select all the files in the playlist window
	(Closes: #152197)

2004-09-09  Ankit Patel <ankit@redhat.com>

	* configure.in: Added 'gu' (Gujarati) to ALL_LINGUAS.

2004-09-01  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (xine_event_message):
	* src/totem-pl-parser.c: (totem_pl_parser_add_asf_parser),
	(totem_pl_parser_add_ra), (totem_pl_parser_add_asf),
	(totem_pl_parser_scheme_is_ignored):
	* src/totem-playlist.c: (totem_playlist_is_media):
	* src/totem.c: (totem_playing_dvd), (totem_is_media),
	(totem_action_open_files_list), (process_options),
	(process_command_line):
	* src/video-dev.c: use g_str_has_prefix instead of strncmp
