@@ -1,5 +1,11 @@
 2004-09-15  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem.c: (totem_action_remote): fix addition of optical media
+	URLs via the remote interface (Patch by Frederic Crozat
+	<fcrozat@mandrakesoft.com>)
+
+2004-09-15  Bastien Nocera  <hadess@hadess.net>
+
 	* data/totem.keys: Add matroska to the .keys file for totem
 	(Patch by Frederic Crozat <fcrozat@mandrakesoft.com>)
 
